--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,5 @@
 # Starter pipeline
+
 # Start with a minimal pipeline that you can customize to build and deploy your code.
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
@@ -10,8 +11,25 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-- script: pip install --no-cache-dir --upgrade -r requirements.txt
-  displayName: 'Install dependencies'
+- task: SonarCloudPrepare@1
+  inputs:
+    SonarCloud: 'SonarCloud'
+    organization: 'fastapi'
+    scannerMode: 'CLI'
+    configMode: 'manual'
+    cliProjectKey: 'fastapi'
+    cliProjectName: 'fastapi'
+    cliSources: '.'
 
-- script: python -m unittest discover tests
-  displayName: 'Unit test'
+- task: CmdLine@2
+  inputs:
+    script: 'pip install --no-cache-dir --upgrade -r requirements.txt'
+- task: CmdLine@2
+  inputs:
+    script: 'python -m unittest discover tests'
+
+- task: SonarCloudAnalyze@1
+- task: SonarCloudPublish@1
+  inputs:
+    pollingTimeoutSec: '300'
+
