Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,3 +33,9 @@ steps:
   inputs:
     pollingTimeoutSec: '300'
 
+- task: Docker@2
+  inputs:
+    containerRegistry: 'DockerHub'
+    repository: 'fastapi'
+    command: 'buildAndPush'
+    Dockerfile: '**/Dockerfile'
